--- a/rollup/core/classes/RollupFullRecalcProcessor.cls
+++ b/rollup/core/classes/RollupFullRecalcProcessor.cls
@@ -24,7 +24,7 @@ public abstract without sharing class RollupFullRecalcProcessor extends RollupAs
     this.rollupMetas = rollupMetas;
     this.recordIds = recordIds;
     this.postProcessor = postProcessor;
-    this.bindVars = new Map<String, Object>{ 'objIds' => this.objIds, 'recordIds' => this.recordIds };
+    this.bindVars = new Map<String, Object>{ RollupQueryBuilder.BIND_VAR => this.objIds, 'recordIds' => this.recordIds };
     this.processMetadata();
   }
 
