--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -46,6 +46,7 @@ public without sharing abstract class RollupCalculator {
       SObjectField lookupKeyField
     ) {
       RollupCalculator calc;
+      // TODO before switch statement check group by fields
       switch on op {
         when ALL, NONE, SOME {
           calc = new ConditionalCalculator(op, opFieldOnCalcItem, opFieldOnLookupObject, metadata, lookupKeyField);
@@ -380,15 +381,14 @@ public without sharing abstract class RollupCalculator {
     return queryFields;
   }
 
-  private List<SObject> tryQuery(SObjectType sObjectType, Set<String> queryFields, List<Object> objIds) {
+  private List<SObject> tryQuery(SObjectType sObjectType, Set<String> queryFields, Object objIds) {
     String query = RollupQueryBuilder.Current.getQuery(sObjectType, new List<String>(queryFields), 'Id', '!=', this.lookupKeyQuery);
     List<SObject> results;
-    Map<String, Object> queryBinds = new Map<String, Object>{ 'objIds' => objIds };
     try {
-      results = this.repo.get(query, queryBinds);
+      results = this.repo.get(query, objIds);
     } catch (System.QueryException qex) {
       query = RollupQueryBuilder.Current.getQuery(sObjectType, new List<String>(queryFields), 'Id', '!=');
-      results = this.repo.get(query, queryBinds);
+      results = this.repo.get(query, objIds);
     }
     return results;
   }
@@ -453,7 +453,6 @@ public without sharing abstract class RollupCalculator {
       this.handleShortCircuit(calcItem);
     }
 
-    @SuppressWarnings('PMD.ApexSOQLInjection')
     protected override Object calculateNewAggregateValue(Rollup.Op op, List<Object> objIds, SObjectType sObjectType) {
       if (this.shouldTriggerFullRecalc == true) {
         this.distinctValues.clear();
@@ -468,15 +467,14 @@ public without sharing abstract class RollupCalculator {
       String query =
         RollupQueryBuilder.Current.getQuery(sObjectType, queryFields, 'Id', '!=', this.lookupKeyQuery + ('\nAND ' + this.opFieldOnCalcItem + '!= null')) +
         (isGroupable && this.isIdCount == false ? ('\nGROUP BY ' + this.opFieldOnCalcItem) : '');
-      Map<STring, Object> queryBinds = new Map<String, Object>{ 'objIds' => objIds };
 
       if (this.isIdCount) {
-        Integer result = this.repo.getCount(query, queryBinds);
+        Integer result = this.repo.getCount(query, objIds);
         for (Integer index = 0; index < result; index++) {
           this.distinctValues.add(index);
         }
       } else {
-        List<SObject> results = this.repo.get(query, queryBinds);
+        List<SObject> results = this.repo.get(query, objIds);
         String calcItemOpField = this.opFieldOnCalcItem.getDescribe().getName();
         for (SObject res : results) {
           // have to use the String representation of the this.opFieldOnCalcItem to avoid:
@@ -1002,7 +1000,6 @@ public without sharing abstract class RollupCalculator {
       return existingVal += this.concatDelimiter + replacementVal;
     }
 
-    @SuppressWarnings('PMD.UnusedLocalVariable')
     private void handleConcatDistinctDelete(SObject calcItem) {
       // we do a replace first, in case this is a reparenting operation
       this.stringVal = this.replaceWithDelimiter(this.stringVal, (String) calcItem.get(this.opFieldOnCalcItem), '');
@@ -1017,7 +1014,7 @@ public without sharing abstract class RollupCalculator {
           '!=',
           this.lookupKeyQuery
         );
-        List<SObject> relatedItems = this.repo.get(query, new Map<String, Object>{ 'objIds' => this.concatDistinctIds });
+        List<SObject> relatedItems = this.repo.get(query, this.concatDistinctIds);
         for (SObject relatedItem : relatedItems) {
           this.handleConcat(relatedItem);
         }
@@ -1099,7 +1096,6 @@ public without sharing abstract class RollupCalculator {
     ) {
       super(op, opFieldOnCalcItem, opFieldOnLookupObject, metadata.FullRecalculationDefaultNumberValue__c, metadata, lookupKeyField);
     }
-    @SuppressWarnings('PMD.UnusedLocalVariable')
     public override void performRollup(List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
       List<SObject> applicableCalcItems = this.op == Rollup.Op.DELETE_AVERAGE ? new List<SObject>() : calcItems;
       applicableCalcItems = this.winnowItems(applicableCalcItems, oldCalcItems);
@@ -1108,7 +1104,7 @@ public without sharing abstract class RollupCalculator {
       if (this.isFullRecalc == false) {
         SObjectType sObjectType = this.getCalcItemType();
         String query = RollupQueryBuilder.Current.getQuery(sObjectType, new List<String>(), 'Id', '!=', this.lookupKeyQuery);
-        denominator += this.repo.getCount(query, new Map<String, Object>{ 'objIds' => calcItems });
+        denominator += this.repo.getCount(query, calcItems);
         oldSum = (Decimal) this.calculateNewAggregateValue(Rollup.Op.SUM, calcItems, sObjectType);
       }
 
@@ -1151,14 +1147,13 @@ public without sharing abstract class RollupCalculator {
       }
     }
 
-    @SuppressWarnings('PMD.UnusedLocalVariable')
     public override void performRollup(List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
       if (this.isFullRecalc == false) {
         Set<String> queryFields = this.getQueryFields();
         // a full-recalc is always necessary because we don't retain the information about the order by field
         String queryString = RollupQueryBuilder.Current.getQuery(this.calcItemSObjectType, new List<String>(queryFields), 'Id', '!=', this.lookupKeyQuery);
         // we have to exclude the current items on delete, otherwise they'll be incorrectly considered
-        List<SObject> additionalItems = this.repo.get(queryString, new Map<String, Object>{ 'objIds' => calcItems });
+        List<SObject> additionalItems = this.repo.get(queryString, calcItems);
         switch on this.op {
           when DELETE_FIRST, DELETE_LAST {
             calcItems = additionalItems;
