--- a/rollup/core/classes/RollupFlowBulkProcessor.cls
+++ b/rollup/core/classes/RollupFlowBulkProcessor.cls
@@ -119,6 +119,8 @@ global without sharing class RollupFlowBulkProcessor {
             }
             input.orderByFirstLast = input.orderByFirstLast.removeEnd(',');
             // metadata values that don't get overridden
+            input.groupByFields = meta.GroupByFields__c;
+            input.groupByRowDelimiter = meta.GroupByRowDelimiter__c;
             input.lookupFieldOnCalcItem = meta.LookupFieldOnCalcItem__c;
             input.lookupFieldOnOpObject = meta.LookupFieldOnLookupObject__c;
             input.rollupFieldOnCalcItem = meta.RollupFieldOnCalcItem__c;
