Adding additional test coverage and updating default group by delimiter based on platform default for rich text fields

--- a/extra-tests/classes/RollupCalculatorTests.cls
+++ b/extra-tests/classes/RollupCalculatorTests.cls
@@ -1943,6 +1943,7 @@ private class RollupCalculatorTests {
     );
 
     String expectedGroupByString =
+      rowDelimiter +
       '(blank), (blank), 50.0' +
       rowDelimiter +
       'One, (blank), 100.0' +
